--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
     "username": "root",
-    "password": "root",
-    "database": "elemes",
-    "host": "127.0.0.1",
+    "password": "f9v6phYTvpXPLBXbAeJI",
+    "database": "railway",
+    "host": "containers-us-west-28.railway.app",
     "dialect": "mysql"
   },
   "test": {
