--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
+    "init": "sequelize init",
     "migrate": "sequelize db:migrate",
     "seed": "sequelize db:seed:all"
   },
