--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,9 @@ DB_NAME=
 SECRET_KEY=
 REFRESH_KEY=
 
-REDISURL=
+REDIS_HOST=
+REDIS_PASSWORD=
+REDIS_PORT=
 
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
